--- a/alacritty.toml
+++ b/alacritty.toml
@@ -1,6 +1,4 @@
-import = [
-    "~/.config/alacritty/themes/themes/tokyo-night.toml"
-]
+import = ["~/.config/alacritty/themes/themes/catppuccin_mocha.toml"]
 
 [window]
 dimensions = { columns = 140, lines = 60 }
